--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.16.2",
     "hbs": "^4.0.1",
     "mongoose": "^5.2.10",
+    "mongoose-autopopulate": "^0.12.0",
     "morgan": "^1.9.0",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^2.2.1",
